k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-converter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: currency-converter
  template:
    metadata:
      labels:
        app: currency-converter
    spec:
      containers:
      - name: currency-converter
        image: 683432915883.dkr.ecr.us-east-1.amazonaws.com/currencyconverter:76a8fbb
        ports:
        - containerPort: 5555
