k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    kubernetes.io/ingress.class: alb
  name: currency-converter-ingress
  labels:
    app.kubernetes.io/component: currency-converter
spec:
  rules:
  - host: currencyconverter.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: currency-converter-service
            port:
              number: 5555
